--- a/ECommerce.Web/web.config
+++ b/ECommerce.Web/web.config
@@ -16,8 +16,12 @@
   </configSections>
   <dataConfiguration defaultDatabase="Connection String"/>
   <connectionStrings>
-    <add name="Connection String" connectionString="Server=.;Database=CatchForm;Password=c..h;User ID=sa" providerName="System.Data.SqlClient"/>
+    <add name="Connection String" connectionString="Server=localhost;Database=Customs;Password=c..h;User ID=sa" providerName="System.Data.SqlClient"/>
+    <add name="connStr" connectionString="Server=localhost;Port=3306;Database=angelet;Password=c..h;User ID=root"/>
   </connectionStrings>
+  <!--<connectionStrings>
+    <add name="connStr" connectionString="server =localhost;port=3306; user id = root; password = 111111; database =angelet"/>
+  </connectionStrings>-->
   <appSettings>
     <add key="user" value="GaoH" />
     <add key="pwd" value="password" />
@@ -69,7 +73,6 @@
     <httpRuntime maxRequestLength="2000000"/>
     <httpModules>
       <add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-      <add name="UrlReWriter" type="ECommerce.Web.UrlReWriter"/>
     </httpModules>
   </system.web>
   <!-- 
@@ -99,9 +102,7 @@
     </defaultDocument>
     <modules>
       <remove name="ScriptModule"/>
-      <remove name="UrlReWriter"/>
       <add name="ScriptModule" preCondition="managedHandler" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-      <add name="UrlReWriter" type="ECommerce.Web.UrlReWriter"/>
     </modules>
     <security>
       <requestFiltering>
