--- a/ECommerce.Admin/ECommerce.Admin.csproj
+++ b/ECommerce.Admin/ECommerce.Admin.csproj
@@ -80,6 +80,7 @@
     <Compile Include="DAL\FactroyInfo.cs" />
     <Compile Include="DAL\FileList.cs" />
     <Compile Include="DAL\Financel.cs" />
+    <Compile Include="DAL\LoanInfo.cs" />
     <Compile Include="DAL\LogList.cs" />
     <Compile Include="DAL\Logs.cs" />
     <Compile Include="DAL\Message.cs" />
@@ -114,6 +115,7 @@
     <Compile Include="Model\FactroyInfo.cs" />
     <Compile Include="Model\FileList.cs" />
     <Compile Include="Model\Financel.cs" />
+    <Compile Include="Model\LoanInfo.cs" />
     <Compile Include="Model\LogList.cs" />
     <Compile Include="Model\Logs.cs" />
     <Compile Include="Model\Message.cs" />
