--- a/ECommerce.Web/ECommerce.Web.csproj
+++ b/ECommerce.Web/ECommerce.Web.csproj
@@ -139,9 +139,7 @@
     <Content Include="images\jigou-logo1.png" />
     <Content Include="images\jigou-logo2.png" />
     <Content Include="images\line.gif" />
-    <Content Include="images\logo.png" />
     <Content Include="images\pingjia.png" />
-    <Content Include="images\qiyeku-img1.jpg" />
     <Content Include="images\w3cfuns_code.html" />
     <Content Include="js\bootstrap.min.js" />
     <Content Include="js\bootstrap\css\bootstrap.min.css" />
@@ -357,6 +355,20 @@
     <Content Include="Scripts\artDialog4.1.6\skins\opera\s2.png" />
     <Content Include="Scripts\artDialog4.1.6\skins\simple.css" />
     <Content Include="Scripts\artDialog4.1.6\skins\twitter.css" />
+    <Content Include="Scripts\images\ui-bg_diagonals-thick_18_b81900_40x40.png" />
+    <Content Include="Scripts\images\ui-bg_diagonals-thick_20_666666_40x40.png" />
+    <Content Include="Scripts\images\ui-bg_flat_10_000000_40x100.png" />
+    <Content Include="Scripts\images\ui-bg_glass_100_f6f6f6_1x400.png" />
+    <Content Include="Scripts\images\ui-bg_glass_100_fdf5ce_1x400.png" />
+    <Content Include="Scripts\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Scripts\images\ui-bg_gloss-wave_35_f6a828_500x100.png" />
+    <Content Include="Scripts\images\ui-bg_highlight-soft_100_eeeeee_1x100.png" />
+    <Content Include="Scripts\images\ui-bg_highlight-soft_75_ffe45c_1x100.png" />
+    <Content Include="Scripts\images\ui-icons_222222_256x240.png" />
+    <Content Include="Scripts\images\ui-icons_228ef1_256x240.png" />
+    <Content Include="Scripts\images\ui-icons_ef8c08_256x240.png" />
+    <Content Include="Scripts\images\ui-icons_ffd27a_256x240.png" />
+    <Content Include="Scripts\images\ui-icons_ffffff_256x240.png" />
     <Content Include="Scripts\jquery-ui-1.8.7.custom.css" />
     <Content Include="Scripts\jquery-ui-1.8.7.custom.min.js" />
     <Content Include="themes\bootstrap-datetimepicker\css\bootstrap-datetimepicker.css" />
