--- a/ECommerce.Web/ECommerce.Web.csproj
+++ b/ECommerce.Web/ECommerce.Web.csproj
@@ -140,6 +140,7 @@
     <Content Include="images\jigou-logo2.png" />
     <Content Include="images\line.gif" />
     <Content Include="images\pingjia.png" />
+    <Content Include="images\sitelogo.png" />
     <Content Include="images\w3cfuns_code.html" />
     <Content Include="js\bootstrap.min.js" />
     <Content Include="js\bootstrap\css\bootstrap.min.css" />
