--- a/ECommerce.Admin/ECommerce.Admin.csproj
+++ b/ECommerce.Admin/ECommerce.Admin.csproj
@@ -71,6 +71,7 @@
     <Compile Include="DAL\AdvisoryList.cs" />
     <Compile Include="DAL\AnswerWrapper.cs" />
     <Compile Include="DAL\ApplyList.cs" />
+    <Compile Include="DAL\AUserInfo.cs" />
     <Compile Include="DAL\BenchmarkCriteria.cs" />
     <Compile Include="DAL\ComInfo.cs" />
     <Compile Include="DAL\CustomerService.cs" />
@@ -106,6 +107,7 @@
     <Compile Include="Model\AdvisoryList.cs" />
     <Compile Include="Model\AnswerWrapper.cs" />
     <Compile Include="Model\ApplyList.cs" />
+    <Compile Include="Model\AUserInfo.cs" />
     <Compile Include="Model\BenchmarkCriteria.cs" />
     <Compile Include="Model\ComInfo.cs" />
     <Compile Include="Model\CustomerService.cs" />
