--- a/ECommerce.DBUtilities/ECommerce.DBUtilities.csproj
+++ b/ECommerce.DBUtilities/ECommerce.DBUtilities.csproj
@@ -55,7 +55,9 @@
     <Reference Include="Microsoft.Practices.Unity.Interception">
       <HintPath>..\ECommerce.Lib\DLL\Microsoft.Practices.Unity.Interception.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="MySql.Data">
+      <HintPath>..\ECommerce.Lib\DLL\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
