--- a/ECommerce.Web/ECommerce.Web.csproj
+++ b/ECommerce.Web/ECommerce.Web.csproj
@@ -391,6 +391,8 @@
     <Content Include="Scripts\images\ui-icons_ffffff_256x240.png" />
     <Content Include="Scripts\jquery-ui-1.8.7.custom.css" />
     <Content Include="Scripts\jquery-ui-1.8.7.custom.min.js" />
+    <Content Include="Scripts\jquery-ui.min.css" />
+    <Content Include="Scripts\jquery-ui.min.js" />
     <Content Include="themes\bootstrap-datetimepicker\css\bootstrap-datetimepicker.css" />
     <Content Include="themes\bootstrap-datetimepicker\css\bootstrap-datetimepicker.min.css" />
     <Content Include="themes\bootstrap-datetimepicker\js\bootstrap-datetimepicker.js" />
