--- a/ECommerce.Web/web.config
+++ b/ECommerce.Web/web.config
@@ -17,7 +17,7 @@
   <dataConfiguration defaultDatabase="Connection String"/>
   <connectionStrings>
     <add name="Connection String" connectionString="Server=localhost;Database=Customs;Password=c..h;User ID=sa" providerName="System.Data.SqlClient"/>
-    <add name="connStr" connectionString="Server=localhost;Port=3306;Database=angelet;Password=c..h;User ID=root;character set=utf8;allow zero datetime=true"/>
+    <add name="connStr" connectionString="Server=localhost;Port=3306;Database=angelet;Password=c..h;User ID=root;character set=utf8;Convert Zero Datetime=True"/>
   </connectionStrings>
   <!--<connectionStrings>
     <add name="connStr" connectionString="server =localhost;port=3306; user id = root; password = 111111; database =angelet"/>
