--- a/ECommerce.Web/ECommerce.Web.csproj
+++ b/ECommerce.Web/ECommerce.Web.csproj
@@ -48,6 +48,10 @@
     <Reference Include="DotNet.Framework.Common">
       <HintPath>..\ECommerce.Lib\DLL\DotNet.Framework.Common.dll</HintPath>
     </Reference>
+    <Reference Include="dsEncrypt, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\ECommerce.Lib\DLL\dsEncrypt.dll</HintPath>
+    </Reference>
     <Reference Include="HtmlAgilityPack">
       <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net20\HtmlAgilityPack.dll</HintPath>
     </Reference>
@@ -112,6 +116,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="base.js" />
     <Content Include="bin\ASPNETAJAXWeb.ValidateCode.dll" />
     <Content Include="css\bootstrap.min.css" />
     <Content Include="css\main-FE.css" />
@@ -158,6 +163,17 @@
     <Content Include="images\pingjia.png" />
     <Content Include="images\sitelogo.png" />
     <Content Include="images\w3cfuns_code.html" />
+    <Content Include="image\angle-logo.png" />
+    <Content Include="image\left.jpg" />
+    <Content Include="image\login-bg.jpg" />
+    <Content Include="image\login.png" />
+    <Content Include="image\logo.png" />
+    <Content Include="image\map.jpg" />
+    <Content Include="image\sp.png" />
+    <Content Include="image\telephone.png" />
+    <Content Include="image\top.jpg" />
+    <Content Include="image\user-icon.png" />
+    <Content Include="image\user-img.png" />
     <Content Include="js\bootstrap.min.js" />
     <Content Include="js\bootstrap\css\bootstrap.min.css" />
     <Content Include="js\bootstrap\fonts\glyphicons-halflings-regular.eot" />
@@ -406,6 +422,7 @@
     <Content Include="Scripts\jquery-ui-1.8.7.custom.min.js" />
     <Content Include="Scripts\jquery-ui.min.css" />
     <Content Include="Scripts\jquery-ui.min.js" />
+    <Content Include="style.css" />
     <Content Include="themes\bootstrap-datetimepicker\css\bootstrap-datetimepicker.css" />
     <Content Include="themes\bootstrap-datetimepicker\css\bootstrap-datetimepicker.min.css" />
     <Content Include="themes\bootstrap-datetimepicker\js\bootstrap-datetimepicker.js" />
@@ -1734,7 +1751,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>1529</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:1529/</IISUrl>
+          <IISUrl>http://localhost:1566/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>http://localhost:8080/</CustomServerUrl>
