--- a/ECommerce.Web/web.config
+++ b/ECommerce.Web/web.config
@@ -16,7 +16,7 @@
   </configSections>
   <dataConfiguration defaultDatabase="Connection String"/>
   <connectionStrings>
-    <add name="Connection String" connectionString="Server=localhost;Database=Customs;Password=c..h;User ID=sa" providerName="System.Data.SqlClient"/>
+    <add name="Connection String" connectionString="Server=localhost;Database=Customs;Password=123;User ID=tuser" providerName="System.Data.SqlClient"/>
     <add name="connStr" connectionString="Server=localhost;Port=3306;Database=angelet;Password=c..h;User ID=root;character set=utf8;Convert Zero Datetime=True"/>
   </connectionStrings>
   <!--<connectionStrings>
